--- a/_data/sample.yaml
+++ b/_data/sample.yaml
@@ -6,4 +6,4 @@ image : https://scontent-cdg4-3.cdninstagram.com/v/t51.2885-15/57122359_32881718
 network : linkedin
 time : 2017-03-08
 description : Ceci est une description linkedin
-image :
+link : https://www.lias-lab.fr/fr/
